--- a/AR/styles/common.css
+++ b/AR/styles/common.css
@@ -7,10 +7,16 @@
     background-color: rgba(0, 0, 0, 0.8);
     z-index: 9999;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: 'Chewy', cursive;
     color: yellow;
+}
+
+img {
+    width: 300px;
+    height: 300px;
 }
 
 .a-loader-title {
